@@ -1,3 +1,5 @@
+- configure removable writable media to use "flush" option instead of "sync" (#23042)
+
 Version 10.4.155 - 2 August 2007, by Pascal "Pixel" Rigaux
 
 - use kbd (setfont) instead of console-tools (consolechars)
