@@ -1,3 +1,6 @@
+- diskdrake:
+  o allow setting "flush" option (for vfat)
+
 Version 10.4.157 - 03 August 2007, by Thierry Vignaud
 
 - report real version on --help
